--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,33 +1,39 @@
-version: "3.9"
+
 services:
   # Neo4j container
-  neo4j:
+  neo-db:
     image: neo4j:latest
     container_name: credit-card-neo4j
     environment:
-      NEO4J_AUTH: neo4j/test  # Set authentication credentials
+      NEO4J_AUTH: neo4j/password  # Set authentication credentials
     ports:
-      - "7474:7474"  # HTTP
-      - "7687:7687"  # Bolt
+      - "7475:7474"  # HTTP
+      - "7688:7687"  # Bolt
     networks:
       - credit-card
+    volumes:
+      - ./neo4j_data:/data
 
   # Qdrant container
   qdrant:
     image: qdrant/qdrant:latest
     container_name: credit-card-qdrant
     ports:
-      - "6333:6333"  # Qdrant API
+      - "6335:6333"  # Qdrant API
+      - "6336:6334" # grpc
     networks:
       - credit-card
-  
+    volumes:
+      - ./qdrant_data:/qdrant/storage
+    restart: always
+
   # Ollama container
   ollama:
     image: ollama/ollama
     container_name: credit-card-ollama
     ports:
-      - "11434:11434"
-    metworks:
+      - "11435:11434"
+    networks:
       - credit-card
 
   # Python app container
@@ -35,15 +41,22 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
-
+    ports:
+      - "8000:8000"
     networks:
       - credit-card
     depends_on:
-      - neo4j  # Ensure Neo4j starts first
+      - neo-db  # Ensure Neo4j starts first
       - qdrant  # Ensure Qdrant starts first
       - ollama # Ensure ollama starts first
     environment:
       - OLLAMA_HOST=http://ollama:11434
+      - QDRANT_HOST=http://qdrant:6333
+      # - NEO4J_URI=neo4j://neo-db:7688
+      - USER_NAME=neo4j
+      - PASSWORD=password
+    stdin_open: true
+    tty: true
 networks:
   credit-card:
     driver: bridge
